--- a/CoderSwag/Base.lproj/Main.storyboard
+++ b/CoderSwag/Base.lproj/Main.storyboard
@@ -24,22 +24,22 @@
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="QFJ-Q8-VPy">
-                                <rect key="frame" x="0.0" y="56.5" width="375" height="546.5"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="140" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="QFJ-Q8-VPy">
+                                <rect key="frame" x="0.0" y="54.5" width="375" height="548.5"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="150" id="mtS-Oq-crz" customClass="CategoryCell" customModule="CoderSwag" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="150"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="categoryCell" rowHeight="140" id="mtS-Oq-crz" customClass="CategoryCell" customModule="CoderSwag" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="140"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="mtS-Oq-crz" id="eAC-ud-UMI">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="149.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="140"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="hoodies" translatesAutoresizingMaskIntoConstraints="NO" id="L12-3o-M5P">
-                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="149.5"/>
+                                                    <rect key="frame" x="0.0" y="3" width="375" height="133.5"/>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="HOODIES" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1yU-ES-IeZ">
-                                                    <rect key="frame" x="69.5" y="48.5" width="236" height="53"/>
+                                                    <rect key="frame" x="69.5" y="43.5" width="236" height="53"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="236" id="npf-ED-1vq"/>
                                                         <constraint firstAttribute="height" constant="53" id="yCk-CT-dmU"/>
@@ -50,10 +50,10 @@
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="bottom" secondItem="L12-3o-M5P" secondAttribute="bottom" id="8kx-zc-OBS"/>
                                                 <constraint firstItem="L12-3o-M5P" firstAttribute="leading" secondItem="eAC-ud-UMI" secondAttribute="leading" id="JGr-K4-MgD"/>
                                                 <constraint firstItem="1yU-ES-IeZ" firstAttribute="centerX" secondItem="eAC-ud-UMI" secondAttribute="centerX" id="Kdx-HO-n80"/>
-                                                <constraint firstItem="L12-3o-M5P" firstAttribute="top" secondItem="eAC-ud-UMI" secondAttribute="top" id="O5U-7P-ZHm"/>
+                                                <constraint firstItem="L12-3o-M5P" firstAttribute="top" secondItem="eAC-ud-UMI" secondAttribute="top" constant="3" id="MHU-gS-7lg"/>
+                                                <constraint firstAttribute="bottom" secondItem="L12-3o-M5P" secondAttribute="bottom" constant="3" id="sN7-Uf-uE2"/>
                                                 <constraint firstItem="1yU-ES-IeZ" firstAttribute="centerY" secondItem="eAC-ud-UMI" secondAttribute="centerY" id="v57-VT-uiY"/>
                                                 <constraint firstAttribute="trailing" secondItem="L12-3o-M5P" secondAttribute="trailing" id="yg2-Jy-cfN"/>
                                             </constraints>
@@ -70,7 +70,7 @@
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="QFJ-Q8-VPy" secondAttribute="bottom" id="6IQ-ar-rAA"/>
                             <constraint firstItem="x2J-vs-iQF" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="30" id="7na-aW-sBa"/>
-                            <constraint firstItem="QFJ-Q8-VPy" firstAttribute="top" secondItem="x2J-vs-iQF" secondAttribute="bottom" constant="10" id="NeH-Ak-u8K"/>
+                            <constraint firstItem="QFJ-Q8-VPy" firstAttribute="top" secondItem="x2J-vs-iQF" secondAttribute="bottom" constant="8" id="NeH-Ak-u8K"/>
                             <constraint firstItem="QFJ-Q8-VPy" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="PAQ-Wl-g9P"/>
                             <constraint firstItem="QFJ-Q8-VPy" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="f2e-OU-xhs"/>
                             <constraint firstItem="x2J-vs-iQF" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="jud-CH-See"/>
