--- a/CoderSwag/Base.lproj/Main.storyboard
+++ b/CoderSwag/Base.lproj/Main.storyboard
@@ -82,16 +82,16 @@
                     </navigationItem>
                     <connections>
                         <outlet property="categoryTable" destination="QFJ-Q8-VPy" id="mhg-iv-Joq"/>
-                        <segue destination="tW4-e9-Oc9" kind="show" id="4CZ-HH-HO2"/>
+                        <segue destination="tW4-e9-Oc9" kind="show" identifier="toProductVC" id="4CZ-HH-HO2"/>
                     </connections>
                 </viewController>
             </objects>
             <point key="canvasLocation" x="1029.5999999999999" y="766.86656671664173"/>
         </scene>
-        <!--View Controller-->
+        <!--ProductVC-->
         <scene sceneID="aSs-en-rPw">
             <objects>
-                <viewController id="tW4-e9-Oc9" sceneMemberID="viewController">
+                <viewController id="tW4-e9-Oc9" customClass="ProductVC" customModule="CoderSwag" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="jxa-5x-drZ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -112,7 +112,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="MEo-vt-uJd" customClass="ProductCell" customModule="CoderSwag" customModuleProvider="target">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="productCell" id="MEo-vt-uJd" customClass="ProductCell" customModule="CoderSwag" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="180" height="273"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
@@ -125,17 +125,16 @@
                                                         <constraint firstAttribute="height" constant="178" id="O1S-QY-ubw"/>
                                                     </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Devslopes Logo Graphic T-Shirt" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Beu-Hb-4gL">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Devslopes Logo Graphic T-Shirt" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="none" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Beu-Hb-4gL">
                                                     <rect key="frame" x="2" y="187" width="176" height="48"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="48" id="i1C-h2-Eho"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="14"/>
-                                                    <color key="textColor" red="0.24763378742987729" green="0.24763378742987729" blue="0.24763378742987729" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$5" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ica-Ei-PAi">
-                                                    <rect key="frame" x="2" y="240" width="176" height="28"/>
+                                                    <rect key="frame" x="2" y="237" width="176" height="22"/>
                                                     <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="14"/>
                                                     <color key="textColor" red="0.49251798793749157" green="0.49251798793749157" blue="0.49251798793749157" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                     <nil key="highlightedColor"/>
@@ -145,13 +144,13 @@
                                         <color key="backgroundColor" red="0.95294117647058818" green="0.95294117647058818" blue="0.95294117647058818" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <constraints>
                                             <constraint firstItem="ica-Ei-PAi" firstAttribute="leading" secondItem="MEo-vt-uJd" secondAttribute="leading" constant="2" id="5Pd-QA-j79"/>
-                                            <constraint firstItem="ica-Ei-PAi" firstAttribute="top" secondItem="Beu-Hb-4gL" secondAttribute="bottom" constant="5" id="7TI-eb-hC6"/>
+                                            <constraint firstItem="ica-Ei-PAi" firstAttribute="top" secondItem="Beu-Hb-4gL" secondAttribute="bottom" constant="2" id="7TI-eb-hC6"/>
                                             <constraint firstItem="AT1-hx-epd" firstAttribute="leading" secondItem="MEo-vt-uJd" secondAttribute="leading" id="OKT-wg-Koj"/>
                                             <constraint firstItem="Beu-Hb-4gL" firstAttribute="top" secondItem="AT1-hx-epd" secondAttribute="bottom" constant="9" id="Wfc-2z-5ki"/>
                                             <constraint firstAttribute="trailing" secondItem="AT1-hx-epd" secondAttribute="trailing" id="ba7-Db-lZF"/>
                                             <constraint firstItem="Beu-Hb-4gL" firstAttribute="leading" secondItem="MEo-vt-uJd" secondAttribute="leading" constant="2" id="jRs-tm-x0A"/>
                                             <constraint firstItem="AT1-hx-epd" firstAttribute="top" secondItem="MEo-vt-uJd" secondAttribute="top" id="mIh-9I-3LV"/>
-                                            <constraint firstAttribute="bottom" secondItem="ica-Ei-PAi" secondAttribute="bottom" constant="5" id="oId-Lt-LoU"/>
+                                            <constraint firstAttribute="bottom" secondItem="ica-Ei-PAi" secondAttribute="bottom" constant="14" id="oId-Lt-LoU"/>
                                             <constraint firstAttribute="trailing" secondItem="Beu-Hb-4gL" secondAttribute="trailing" constant="2" id="qpx-ak-uwd"/>
                                             <constraint firstAttribute="trailing" secondItem="ica-Ei-PAi" secondAttribute="trailing" constant="2" id="uG1-Di-iew"/>
                                         </constraints>
@@ -175,6 +174,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="LYD-vm-oJK"/>
                     </view>
+                    <connections>
+                        <outlet property="productsCollection" destination="ONJ-zR-Bx3" id="au3-n7-Xho"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Fyt-vK-qhJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
